fixed distortion issue with border and added dynamic props and classes

--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -1,10 +1,10 @@
 .button{
     background: var(--gradient-color);
-    padding: .8rem 1rem;
-    border: 1px solid var(--gradient-color);
+    padding: .8rem 1.15rem;
+    border: .8px solid transparent;
     font-size: 1rem;
+    font-weight: 550;
     color: var(--shadow-light-color);
-    cursor: pointer;
     transition: all .2s ease-in;
     border-radius: 2rem;
     box-shadow: var(--box-shadow);
@@ -13,6 +13,7 @@
 
 .button:hover{
     background: var(--main-bg-color);
-    border: 1px solid var(--icons-color);
+    border: .8px solid rgba(128, 128, 128, 0.718);
+    cursor: pointer;
     color: var(--icons-color);
 }
